# ArtifactVK

./: .gitignore  ArtifactVK.sln  CMakeLists.txt  CMakePresets.json  README.md
ArtifactVK/: App.cpp  App.h  ArtifactVK.cpp  ArtifactVK.vcxproj  DescriptorSetBuilder.cpp  DescriptorSetBuilder.h  Fence.cpp  Fence.h  Image.cpp  Image.h  ManualScope.h  main.cpp
ArtifactVK/backend/: Barrier.cpp  Barrier.h  Buffer.cpp  Buffer.h  CommandBufferPool.cpp  CommandBufferPool.h  DebugMarker.cpp  DebugMarker.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetBuilder.cpp  DescriptorSetBuilder.h  DeviceExtensionMapping.cpp  DeviceExtensionMapping.h  ExtensionFunctionMapping.cpp  ExtensionFunctionMapping.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Semaphore.cpp  Semaphore.h  ShaderModule.cpp  ShaderModule.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  (+16 more)
ArtifactVK/shaders/: compile_shaders.py  triangle.frag  triangle.vert  triangle.vertex.glsl
ArtifactVK/tools/: build_glsl.xml  glsl.targets
cmake/: link_assets.cmake
include/: App.h  ComputeSample.h  ManualScope.h  Model.h  ModelRenderer.h  Vertex.h
include/backend/: Buffer.h  CommandBufferPool.h  DescriptorSetBuilder.h  DeviceExtensionMapping.h  ExtensionFunctionMapping.h  IndexBuffer.h  PhysicalDevice.h  QueryPool.h  Semaphore.h  ShaderModule.h  Texture.h  Timer.h  TimerPool.h  VertexBuffer.h  Viewport.h  VulkanDebugMessenger.h  VulkanDevice.h  VulkanInstance.h  VulkanSurface.h  Window.h
shaders/: CMakeLists.txt  triangle.frag
src/: App.cpp  CMakeLists.txt  ComputeSample.cpp  Model.cpp  ModelRenderer.cpp  main.cpp
src/backend/: Barrier.cpp  Buffer.cpp  CMakeLists.txt  CommandBufferPool.cpp  DebugMarker.cpp  DescriptorPool.cpp  DescriptorSetBuilder.cpp  DeviceExtensionMapping.cpp  ExtensionFunctionMapping.cpp  Fence.cpp  Framebuffer.cpp  IndexBuffer.cpp  PhysicalDevice.cpp  Pipeline.cpp  QueryPool.cpp  Queue.cpp  RenderPass.cpp  Semaphore.cpp  ShaderModule.cpp  Swapchain.cpp  Texture.cpp  Timer.cpp  TimerPool.cpp  UniformBuffer.cpp  VertexBuffer.cpp  Viewport.cpp  VulkanDebugMessenger.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanSurface.cpp  Window.cpp
textures/: CMakeLists.txt
